Map css separated, two styles done. Added padding in order to avoid navbar covering titles.

--- a/webPracticas/css/style.css
+++ b/webPracticas/css/style.css
@@ -119,6 +119,10 @@ h2 {
     margin-top: 5%;
 }
 
+#mapa, #intro {
+    padding-top: 50px;
+}
+
 /* wiki */
 #wiki {
     display: table;
